# keypuncher

./: README.md  techstack.md  techstack.yml
C#/Untangling.NetAndDLLs/: Analyze-DLLs.ps1
C++/Array/: main.cpp
C++/Auto/: auto.cpp
C++/Basic/Classes/: classes.cpp
C++/Basic/PointerVsReference/: pointer.cpp
C++/Basic/STL-Intro/: stl-intro.cpp
C++/Basic/Streams/: myInFile.txt  streams.cpp
C++/CMake/cmakeFromScratch/Step1/: CMakeLists.txt  tutorial.cxx
C++/CMake/cmakeFromScratch/Step1/lib/MathFunctions/: CMakeLists.txt  Operation.cxx  Operation.hpp
C++/CMake/cmakeWinProtoCxx/CMakeProtobufExample/: CMakeLists.txt  library.proto  main.cpp
C++/CMake/cmakeWinProtoCxx/Step8/: CMakePresets.json
C++/Networking/httpSocket/crossPlatform/: Makefile  http-start.cpp  httpCapExamleDotCom.pcapng
C++/Networking/httpSocket/winsock/: Makefile  http-start.c  http-start.cpp
C++/Networking/simpleSocket/: .devcontainer.json  Makefile  chatClient.cpp  chatServer.cpp  client.cpp  clientTCP.cpp  clientUDP.cpp  server.cpp  serverTCP.cpp  serverUDP.cpp
C++/Networking/simpleSocket/CrossPlatform/: Makefile  clientTCPCrossPlat.cpp  serverTCPCrossPlat.cpp
C++/Networking/simpleSocketTestCopy/: Makefile  clientTCP.cpp  serverTCP.cpp
C++/String/: string.cpp
C++/VSCode/DevContainer/: .devcontainer.json  Makefile  hello.cpp
C++/VSCode/GDB/intro/: debugging.cpp  my_script.gdb
C++/Wireshark/basic/: myDissector.c
Cartography/GeographicLib/Intro/conversionIntro/: CMakeLists.txt  coordConversionIntro.cpp
Cartography/GeographicLib/Intro/geographiclib_test/: CMakeLists.txt  geographiclib_test.cpp
Docker/buildx/test1/: Dockerfile
Docker/imagesConts/: Dockerfile  main.cpp  sorters.cpp
Docker/multiarch/: Dockerfile
Docker/multistage/2Stage/: Dockerfile.nonRoot  Dockerfile.simple  main.cpp
Docker/multistage/cpp-telemetry-app/: CMakeLists.txt  Dockerfile  main.cpp  telemetry_processor.cpp  telemetry_processor.h  test_telemetry_processor.cpp
Docker/volumes/: Dockerfile  main.cpp
Kubernetes/Intro/ObjectMgmt/revision2/: nginx-all.yaml  nginx-pod.yaml  nginx-service.yaml
Kubernetes/Intro/ObjectMgmt/revison1/: nginx-service.yaml
Kubernetes/Intro/deploys-and-rollouts/: nginx-depl.yaml
Kubernetes/Intro/labels-selectors/: color-api.yaml  color-depl.yaml
Kubernetes/Intro/namespaces/: color-api.yaml  traffic-generator.yaml
Kubernetes/Intro/replica-sets/: nginx-rs.yaml
Kubernetes/Intro/resource-quotas/: color-api-depl.yaml  color-api-pod.yaml  dev-ns.yaml  heavy-api-pod.yaml  prod-ns.yaml
Kubernetes/Intro/services/: color-api-clusterip.yaml  color-api-deployment.yaml  color-api-nodeport.yaml  traffic-generator.yaml
Networking/Python/apt-speedy/: apt-speedy.py
Networking/protobuf/intro/: CMakeLists.txt  test.proto  test_proto.cpp
Networking/protobuf/protobuf2/protobuf2/: .gitignore  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest  protobuf2.csproj
Networking/protobuf/protobuf2/protobuf2/AddressBook/: AddressBook.proto  AddressBookView.axaml  AddressBookView.axaml.cs  SampleAdBookDBase.cs
NuGet/example1/: Program.cs
NuGet/example2/AppLogger/: AppLogger.csproj  Class1.cs
Python/Pytest/TestContainers/: Dockerfile  testContainersPlane.py
Python/VBox_backups/: backupVBoxVMs.py
Python/lambdas/: with-lambdas.py  without-lambdas.py
Python/lamdas/: without-lamdas.py
Python/networking/sockets/: echo-server.py  multiProcessPool.py
Python/networking/sockets/py-socks-tutorial-realPython/: echo-server.py
Rust/Intro/hello_world/: Cargo.toml
Vagrant/: Vagrantfile
Windows/WPF/FirstBook/Chap3/columnOfSettings/ColumnOfSettings/: ColumnOfSettings.sln
Windows/WPF/FirstBook/Chap3/columnOfSettings/ColumnOfSettings/ColumnOfSettings/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
aliases/: .zshrc
git/rebase/: Elf.py  solve1.py
make/errorHandling/: Makefile
make/hellomake/: Makefile  hellomake.c  hellomake.h
make/makefiletutorial/01_mkBeginner/: Makefile
make/makefiletutorial/02_mkTargets/: Makefile
make/makefiletutorial/04_mkAutoVars/: Makefile
make/makefiletutorial/07_mkRecursive/mkRecursiveExport/: Makefile
make/makefiletutorial/08_mkVarFlavors/01_RecursiveVars/: Makefile
make/makefiletutorial/08_mkVarFlavors/02_SetVarIfNotSetPreviously/: Makefile
make/makefiletutorial/08_mkVarFlavors/03_Nullstring/: Makefile
make/makefiletutorial/08_mkVarFlavors/04_Appending/: Makefile
make/makefiletutorial/09_mkTargetSpecVars/: Makefile
make/makefiletutorial/11_mkFunctions/01_StringSubstitution/: Makefile
make/makefiletutorial/11_mkFunctions/02_ForEach/: Makefile
make/makefiletutorial/11_mkFunctions/03_If/: Makefile
make/makefiletutorial/11_mkFunctions/04_Call/: Makefile
make/makefiletutorial/11_mkFunctions/05_Shell/: Makefile
make/makefiletutorial/12_mkVpath/: Makefile
make/makefiletutorial/14_mkCookbook/: Makefile
octave/tutorial/: ex1.4.m  ex1.5.m  plot3d.m  tutorial_sup.m
